--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.13.5",
+    "mongoose": "^5.13.5"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.12"
   }
 }
